<resources>
    <string name="app_name">Shoppurs Shop</string>
    <string name="action_settings">Settings</string>
    <string name="scan_dit_key">AQ2dUhhEBkecKXxPLRnAmdQV5A0IO0jqmzJjmBshCS42ea9Kx2Kw4Sok0ntHX1qVYE+oftB9bs22fDCGywPa+dNUOHNZSq5P6TF2quR5a3w4RskH73KJyK8er5AaN8pHvSbd5ZXvF5BKCMgtY1YhYXDFKO9SLSnyDXubKLYGpmgchaAXFFD97G9a0lTzlJ5Gt1wXFRc0F2PIRNvfjD6/qmOCe/keW9zPC7ZSux4oAPwYH/CDkhSQtctrYBtOcfXAWnqJOO8/85opDdzEY7o9FOoiINN/CN3eZdPnULeU9LlbtiDsTW8p67OoHd0Ae+s2JnqBy7iUhANKc5SNRpfbtrhun5WOq/BeoEeuFI15EDj5UHLBDz12wltM+mC0Na7Z67TIrht7tWKDpBhIILZH4VlbHfORIZw1eqp1wjIpVrO+7rAX9wtQkOhLa4Ik90MSplJYY2ICkjcqhe0yKNqAs4twSacxuZaYVdWssInAxK1yBDMLC4jvMAObBImhZYTJG9O/RasrVJFdh4gInXP8+JJYfjHv3mrkcgAu5pc2I7l1n8qnE5yL//sHKXGwrR00wkqKFeFql/WfW2FBPYAMhO4w2Yxl9c0P0UWUqVcMdMaVIpJnglW3KIzxwpzfh0sJCOjSGhfsX6gtItJtLdKcg491yPvJPIAeSxkXzB+H3x3dSgV8wkQyfui3qj7SCZoBWA+ZbaBlwNHT/tBmHVlKVmr5o8YD4Qiqh+OivW/p0lhc9Qiu1LZi1cu60X5A/9wmWQHPPClNM4JLApllwwyU3YBQdLjJcZIKaHsjN0ir7r7x5gE=</string>
    <string name="url">http://api.shoppurs.in:8085/ShoppursShopApp</string>
    <string name="cust_url">http://api.shoppurs.in:8085/ShoppursCustomerApp</string>
    <string name="partner_url">http://api.shoppurs.in:8085/ShoppursPartnerApp</string>
    <string name="base_url">http://api.shoppurs.in:8085</string>
    <string name="base_image_url">http://www.shoppurs.in/images</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="no_internet">Internet connection is not available.</string>
    <string name="connection_error">Unable to establish connection to the server. Please retry again and if the problem still persists, please contact to Shoppurs technical support team for further assistance.</string>
    <string name="json_parser_error">Json parsing error.</string>
    <string name="full_name_required">Please enter full name.</string>
    <string name="shop_name_required">Please enter Shop name.</string>
    <string name="address_required">Please enter your address.</string>
    <string name="pincode_required">Please enter your pincode.</string>
    <string name="email_required">Please enter Email Id.</string>
    <string name="mobile_required">Please enter Mobile.</string>
    <string name="mobile_valid">Please enter valid Mobile Number.</string>
    <string name="location_required">Please enter Location.</string>
    <string name="password_required">Please enter Password.</string>
    <string name="password_not_match">Password is not matching.</string>
    <string name="valid_email">Please enter valid Email ID.</string>
    <string name="accept_terms">Please accept Terms and Conditions.</string>
    <string name="email_phone">Email/Phone</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login With</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t Have an Account?</string>
    <string name="register_now">Register Now</string>
    <string name="sign_register">Sign Up Registration</string>
    <string name="agree">You agree with the Terms &amp; Conditions of Shoppurs </string>
    <string name="select_all">Select All</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="select_language">Select Language</string>
    <string name="personal_info">Personal Information</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="pan_card">Pan Card</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="gst_no">GST Number</string>
    <string name="mobile">Mobile</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="conf_password">Confirm Password</string>
    <string name="term_condition">Agree With Terms &amp; Conditions</string>
    <string name="bank_info">Bank Details</string>
    <string name="business_name">Business Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_account_no">Bank Account No</string>
    <string name="bank_address">Bank Address</string>
    <string name="bank_ifsc">IFSC Code</string>
    <string name="select_category">Select Category</string>
    <string name="today">Today</string>
    <string name="orders">Orders</string>
    <string name="order_amount">Order Amount:</string>
    <string name="products">Products</string>
    <string name="customers">Customers</string>
    <string name="offers">Offers</string>
    <string name="categories">Categories</string>
    <string name="stores_near_by">Stores Nearby</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="mrp">MRP:</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="product_barcode">Barcode</string>
    <string name="product_scan_barcode">Scan Barcode</string>
    <string name="product_desc">Description</string>
    <string name="product_mrp">MRP</string>
    <string name="product_sp">Selling Price</string>
    <string name="product_reorder_level">Reorder Level</string>
    <string name="product_qoh">Quantity</string>
    <string name="product_hsn_code">Hsn Code</string>
    <string name="product_manufacture_date">Manufacture Date</string>
    <string name="product_expiry_date">Expiry Date</string>
    <string name="product_manufacture_by">Manufacture By</string>
    <string name="product_warranty">Warranty (months)</string>
    <string name="cgst">CGST</string>
    <string name="igst">IGST</string>
    <string name="sgst">SGST</string>
    <string name="add">Add</string>
    <string name="add_photo1">Add Photo 1</string>
    <string name="add_photo2">Add Photo 2</string>
    <string name="add_photo3">Add Photo 3</string>
    <string name="unit_name">Unit of measure</string>
    <string name="unit_value">Unit value</string>
    <string name="unit_price">Unit Price</string>
    <string name="size">Enter Size</string>
    <string name="color_name">Color Name</string>
    <string name="choose_color">Choose Color</string>
    <string name="save">Save</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_photo">Add Photo</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="color_theme">Color Themes</string>
    <string name="pls_chk_cardreader_availble">Please check whether card reader available and its ON?</string>
    <string name="logging_user">Logging User</string>
    <string name="creating_account">Creating Account</string>
    <string name="daily_seed_icon">&#xe611;</string>
    <string name="edit_profile_icon">&#xe005;</string>
    <string name="chat_icon">&#xe04a;</string>
    <string name="customer_icon">&#xe001;</string>
    <string name="day_plan_icon">&#xe096;</string>
    <string name="month_icon">&#xe075;</string>
    <string name="product_list_icon">&#xe032;</string>
    <string name="sale_forecast_icon">&#xe06b;</string>
    <string name="sale_target_icon">&#xe077;</string>
    <string name="sale_activities_icon">&#xe09e;</string>
    <string name="holiday_list_icon">&#xe035;</string>
    <string name="settings_icon">&#xe06c;</string>
    <string name="sign_out_icon">&#xe097;</string>
    <string name="support_icon">&#xe056;</string>
    <string name="bell_icon">&#xe027;</string>
    <string name="all_icon">&#xe034;</string>
    <string name="amout_icon">&#xe049;</string>
    <string name="attachment_icon">&#xe093;</string>
    <string name="like_icon">&#xe068;</string>
    <string name="camera_icon">&#xe07f;</string>
    <string name="lock_open_icon">&#xe08f;</string>
    <string name="comments_icon">&#xe02c;</string>
    <string name="home_icon">&#xe069;</string>
    <string name="dashboard_icon">&#xe028;</string>
    <string name="edit_icon">&#xe05f;</string>
    <string name="mail_icon">&#xe086;</string>
    <string name="employee_icon">&#xe003;</string>
    <string name="fare_icon">&#xe088;</string>
    <string name="star_icon">&#xe09b;</string>
    <string name="plane_icon">&#xe012;</string>
    <string name="gift_icon">&#xe02f;</string>
    <string name="question_icon">&#xe05d;</string>
    <string name="help_icon">&#xe056;</string>
    <string name="info_icon">&#xe08b;</string>
    <string name="list_icon">&#xe06a;</string>
    <string name="meeting_expenses_icon">&#xe02a;</string>
    <string name="messages_icon">&#xe01f;</string>
    <string name="phone_icon">&#xe010;</string>
    <string name="navigation_icon">&#xe045;</string>
    <string name="new_icon">&#xe060;</string>
    <string name="new_leads_icon">&#xe085;</string>
    <string name="notification_icon">&#xe031;</string>
    <string name="book_open_icon">&#xe04c;</string>
    <string name="on_leave_icon">&#xe035;</string>
    <string name="other_expenses_icon">&#xe025;</string>
    <string name="call_icon">&#xe046;</string>
    <string name="plus_icon">&#xe095;</string>
    <string name="key_icon">&#xe08c;</string>
    <string name="qty_sale_icon">&#xe04d;</string>
    <string name="qty_target_icon">&#xe04e;</string>
    <string name="sale_icon">&#xe006;</string>
    <string name="target_icon">&#xe09e;</string>
    <string name="sale_office_icon">&#xe04b;</string>
    <string name="scroll_icon">&#xe603;</string>
    <string name="search_icon">&#xe090;</string>
    <string name="share_icon">&#xe05b;</string>
    <string name="sound_icon">&#xe0a0;</string>
    <string name="station_icon">&#xe094;</string>
    <string name="tele_fax_icon">&#xe02e;</string>
    <string name="theme_icon">&#xe087;</string>
    <string name="travel_mode_icon">&#xe05c;</string>
    <string name="direction_icon">&#xe042;</string>
    <string name="directions_icon">&#xe041;</string>
    <string name="diamond_icon">&#xe043;</string>
    <string name="hourglass_icon">&#xe018;</string>
    <string name="expiration_goods_notice">Please Check the Expirable Goods and the good reorder level to maintain an Optimum Stock level at the Store.</string>
    <string name="notifications_channel_name">Message Notification</string>
    <string name="notifications_channel_description">notification</string>
    <string name="address_found">Address Found</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY ADDRESS</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude values</string>
    <string name="service_not_available">Service is not available</string>
    <string name="no_address_found">No locationAddress is found</string>
    <string name="no_location_data_provided">No data is provided</string>
    <string name="transition_dialog">transition_dialog</string>
</resources>