<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".fragments.BankFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_bank_info_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/large_text_size"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_info" />

        <EditText
            android:id="@+id/edit_business_name"
            android:layout_below="@+id/text_bank_info_label"
            android:hint="@string/business_name"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:theme="@style/MySelectViewTheme"
            android:layout_marginTop="@dimen/register_container_margin_top"
            android:textSize="@dimen/edit_text_small_text_size"
            android:paddingBottom="@dimen/edit_text_small_vertical_padding"
            android:paddingTop="@dimen/edit_text_small_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_bank_name"
            android:layout_below="@+id/edit_business_name"
            android:hint="@string/bank_name"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:theme="@style/MySelectViewTheme"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:textSize="@dimen/edit_text_small_text_size"
            android:paddingBottom="@dimen/edit_text_small_vertical_padding"
            android:paddingTop="@dimen/edit_text_small_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_bank_account"
            android:layout_below="@+id/edit_bank_name"
            android:hint="@string/bank_account_no"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:theme="@style/MySelectViewTheme"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:textSize="@dimen/edit_text_small_text_size"
            android:paddingBottom="@dimen/edit_text_small_vertical_padding"
            android:paddingTop="@dimen/edit_text_small_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_bank_address"
            android:layout_below="@+id/edit_bank_account"
            android:hint="@string/bank_address"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:theme="@style/MySelectViewTheme"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:textSize="@dimen/edit_text_small_text_size"
            android:paddingBottom="@dimen/edit_text_small_vertical_padding"
            android:paddingTop="@dimen/edit_text_small_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_bank_ifsc"
            android:layout_below="@+id/edit_bank_address"
            android:hint="@string/bank_ifsc"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:theme="@style/MySelectViewTheme"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:textSize="@dimen/edit_text_small_text_size"
            android:paddingBottom="@dimen/edit_text_small_vertical_padding"
            android:paddingTop="@dimen/edit_text_small_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@+id/edit_bank_ifsc"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/language_fragment_view_size">

            <Button
                android:id="@+id/btn_back"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size"
                android:background="@drawable/accent_2_solid_round_corner_background"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_marginLeft="12dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size"
                android:background="@drawable/accent_1_solid_round_corner_background"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>