<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddCustomerActivity"
    tools:showIn="@layout/activity_add_customer">

    <ScrollView
        android:layout_above="@+id/linear_footer"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_add_customer_label"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="@dimen/large_text_size"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_customer" />

            <EditText
                android:id="@+id/edit_customer_name"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:theme="@style/MySelectViewTheme"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/edit_text_small_text_size"
                android:paddingBottom="@dimen/edit_text_small_vertical_padding"
                android:paddingTop="@dimen/edit_text_small_vertical_padding"
                android:paddingLeft="@dimen/edit_text_horizontal_padding"
                android:paddingRight="@dimen/edit_text_horizontal_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_customer_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:theme="@style/MySelectViewTheme"
                android:layout_marginTop="@dimen/edit_text_margin"
                android:textSize="@dimen/edit_text_small_text_size"
                android:paddingBottom="@dimen/edit_text_small_vertical_padding"
                android:paddingTop="@dimen/edit_text_small_vertical_padding"
                android:paddingLeft="@dimen/edit_text_horizontal_padding"
                android:paddingRight="@dimen/edit_text_horizontal_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_customer_mobile"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:theme="@style/MySelectViewTheme"
                android:layout_marginTop="@dimen/edit_text_margin"
                android:textSize="@dimen/edit_text_small_text_size"
                android:paddingBottom="@dimen/edit_text_small_vertical_padding"
                android:paddingTop="@dimen/edit_text_small_vertical_padding"
                android:paddingLeft="@dimen/edit_text_horizontal_padding"
                android:paddingRight="@dimen/edit_text_horizontal_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_customer_address"
                android:hint="@string/address"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:theme="@style/MySelectViewTheme"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/edit_text_small_text_size"
                android:paddingBottom="@dimen/edit_text_small_vertical_padding"
                android:paddingTop="@dimen/edit_text_small_vertical_padding"
                android:paddingLeft="@dimen/edit_text_horizontal_padding"
                android:paddingRight="@dimen/edit_text_horizontal_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_customer_pin"
                android:hint="@string/pincode"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:theme="@style/MySelectViewTheme"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/edit_text_small_text_size"
                android:paddingBottom="@dimen/edit_text_small_vertical_padding"
                android:paddingTop="@dimen/edit_text_small_vertical_padding"
                android:paddingLeft="@dimen/edit_text_horizontal_padding"
                android:paddingRight="@dimen/edit_text_horizontal_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_add_photo"
                    android:paddingLeft="@dimen/view_horizontal_margin"
                    android:paddingRight="@dimen/view_horizontal_margin"
                    android:text="@string/add_photo"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/large_text_size"
                    android:background="@drawable/grey_border_transparent_background"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/regular_btn_size" />

            </RelativeLayout>


            <Button
                android:id="@+id/btn_add"
                android:layout_marginTop="40dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size"
                android:background="@drawable/accent_2_solid_round_corner_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>

    <include layout="@layout/footer_layout"/>

</RelativeLayout>