<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.settings.AddCategoryActivity"
    tools:showIn="@layout/activity_add_category">

    <TextView
        android:id="@+id/text_select_category_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/large_text_size"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category" />

    <Button
        android:id="@+id/btn_select_all"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/select_all"
        android:layout_below="@+id/text_select_category_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_alignParentRight="true"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/small_text_size"
        android:background="@drawable/accent_color_3_solid_round_backgground"
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_below="@+id/btn_select_all"
        android:layout_above="@+id/linear_footer"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linear_footer"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/language_fragment_view_size">

        <Button
            android:id="@+id/btn_back"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            android:background="@drawable/accent_2_solid_round_corner_background"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_next"
            android:layout_marginLeft="12dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            android:background="@drawable/accent_1_solid_round_corner_background"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:textColor="?attr/primaryTextColor"
        android:id="@+id/text_no_data"
        android:gravity="center"
        android:visibility="gone"
        android:text="All categories are synced"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>